Make "responsive", needs to be fixed on mobile, columns not stacking

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,16 @@
-html, body, section, .full-height {
-    height: 100%;
+/* Responsive layout*/
+@media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+    }
+  }
+
+.row {
+    display: flex;
+}
+
+.column {
+    flex: 50%;
 }
 
 #textArea {
